# sentinel-mas

./: .dockerignore  .env.api.example  .env.example  .env.sentinel.example  .env.shared.example  .flake8  .gitignore  API_README.md  README.md  app.py  app_ui.py  app_with_guard.py  config.py  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements-api.txt  requirements-test.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci-cd.yaml  ci.yaml  deploy-ecs.yaml  docker-api.yaml  docker-central.yaml  docker-ui.yaml  package-build.yaml
api_service/: Dockerfile  README.MD  __init__.py  auth.py  config.py  docker-entrypoint.sh  main.py  models.py  requirements-api.txt
chatbot_ui/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  chatbot.html  chatbot.jsx  ecs-task-definition.json  example-prompts.json  index.html  nginx.conf  nginx.conf.prod  nginx.conf.template
images/: workflow_diagram.mermaid  workflow_explanation.md
scripts/: _local-sonar-test.sh  aws_create-ecs-task-role-policy.sh  aws_setup_ssm.sh  create_audit_schema.py  create_kb.py  ecs-task-role-policy.json  ecs_task_definition.json  fix-deployment.sh  fix-http-listeners.sh  fix-https-listeners.sh  generate_report.py  guard_tool_call_test.py  lint.sh  manual_script_recrreate.sh  query_kb.py  restore-local.sh  run_api_add_ssm_perm.sh  run_sonar_test.sh  setup-sentinel-mas-terraform.sh  setup_dev.sh  sop_schema.sql  ssm-policy.json  start_api.py  test_timewin.py  wait-for-deployment.sh
sentinel_central/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
sentinel_central/app/: bus.py  envelope.py  events.py  notification_service.py  tracking_service.py  webapi_service.py
sentinel_central/app/common/: repository.py  resolve.py  utils.py
sentinel_central/app/db/: __init__.py  db.py  migrate.py  models.py
sentinel_central/app/services/: sesessions.py
sentinel_mas/: app_runtime.py  config.py  crew.py  crew_agents.py  crew_with_guard.py  router.py  timewin.py  utils.py
terraform/: DEPLOYMENT-GUIDE.md  README.md  ROUTE53-SETUP.md  backup.sql  get-appsec-info.sh
test-results/: junit-20251101-012749.xml  junit-20251101-012749.xml.html
tests/: conftest.py
(+150 files in other folders)
