[project]
name = "sentinel-central"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4",
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "pgvector>=0.2.4",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]
