[project]
name = "sentinel-central"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4",
    "asyncpg>=0.29",
    "aws-xray-sdk==2.12.0",
    "fastapi>=0.119.0",
    "pgvector>=0.2.4",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "starlette>=0.38.6",
    "uvicorn[standard]>=0.37.0",
]
